# SparkNet

./: LICENSE  README.md  ROADMAP.md  SETUP.md  build-cpu.sbt  build.sbt  imagenet.mean  imnet.sh  pom.xml
caffe/examples/cifar10/: cifar10_full_java_solver.prototxt  cifar10_full_java_train_test.prototxt  cifar10_full_train_test.prototxt
caffe/include/caffe/: data_layers.hpp  parallel.hpp  solver.hpp
caffe/models/bvlc_googlenet/: quick_solver.prototxt  solver.prototxt  train_val.prototxt
caffe/models/bvlc_reference_caffenet/: train_val.prototxt
caffe/src/caffe/: parallel.cpp  solver.cpp
caffe/src/caffe/layers/: java_data_layer.cpp
caffe/src/caffe/proto/: caffe.proto
cmake/Modules/: FindLevelDB.cmake  FindOpenBlas.cmake
data/adult/: get_adult.sh
doc/: creating-jars.md
ec2/: cloud-config.txt  create_labelfile.py  evaluate-all.sh  evaluate-googlenet.sh  evaluate.py  launch_sparknet.sh  load_imagenet_to_s3.py  pull.py  spark_ec2.py
libccaffe/: CMakeLists.txt  ccaffe.cpp  ccaffe.h
models/adult/: adult.prototxt
models/bvlc_googlenet/: solver.prototxt  solver.prototxt.adadelta  solver.prototxt.adam  solver.prototxt.nesterov  solver.prototxt.org  solver.prototxt.step  solver1.prototxt  train_val.prototxt  train_val.prototxt.input  train_val.prototxt.org  train_val1.prototxt
models/bvlc_reference_caffenet/: solver.prototxt  train_val.prototxt
models/cifar10/: cifar10_quick.prototxt  cifar10_quick_solver.prototxt  cifar10_quick_train_test.prototxt
models/tensorflow/alexnet/: alexnet_graph.pb  alexnet_graph.py
models/tensorflow/mnist/: mnist_conv.py  mnist_graph.pb  mnist_graph.py
models/test/: test.prototxt
project/: plugins.sbt
scripts/: put_imagenet_on_local.py  put_imagenet_on_s3.py
src/main/java/caffe/: Caffe.java
src/main/java/libs/: ByteImage.java  CaffeLibrary.java  JavaByteNDArray.java  JavaNDArray.java  JavaNDUtils.java  TensorFlowHelper.java
src/main/java/org/apache/spark/sparknet/: CaffeLibrary.java  JavaNDArray.java  JavaNDUtils.java
src/main/scala/apps/: AlexNetMultiGPUApp.scala  CifarApp.scala  CifarDBApp.scala  CifarLMDBApp.scala  FeaturizerApp.scala  GoogleNetMultiGPUApp.scala  ImageNetApp.scala  ImageNetCreateDBApp.scala  ImageNetCreateLMDBApp.scala  ImageNetRunDBApp.scala  ImageNetRunLMDBApp.scala  MnistApp.scala  MultiGPUApp.scala  TFImageNetApp.scala  TestApp.scala  TestApp2.scala
src/main/scala/libs/: ByteNDArray.scala  CaffeNet.scala  CaffeSolver.scala  CaffeWeightCollection.scala  JavaCPPUtils.scala  Layers.scala  Logger.scala  MinibatchSampler.scala  NDArray.scala  Net.scala  Preprocessor.scala  ProtoLoader.scala  Synchronizer.scala  TensorFlowNet.scala  TensorFlowUtils.scala  TensorFlowWeightCollection.scala  WeightCollection.scala  WorkerStore.scala
src/main/scala/loaders/: CifarLoader.scala  ImageNetLoader.scala  MnistLoader.scala
src/main/scala/org/apache/spark/sparknet/: ImageNetApp.scala  imagenet.scala  ndarray.scala
src/main/scala/preprocessing/: ComputeMean.scala  CreateDB.scala  CreateLMDB.scala  ScaleAndConvert.scala
src/test/scala/: README.md
src/test/scala/apps/: AdultSpec.scala  CallbackBenchmarkSpec.scala  ImageNetBenchmarkSpec.scala  LoadAdultDataSpec.scala  LoadSqlDatasetSpec.scala
src/test/scala/libs/: CaffeNetSpec.scala  CaffeWeightCollectionSpec.scala  CifarCppSpec.scala  CifarFeaturizationSpec.scala  CifarSpec.scala  LayerSpec.scala  MinibatchSamplerSpec.scala  NDArraySpec.scala  PreprocessorSpec.scala  TensorFlowNetSpec.scala  WeightCollectionSpec.scala
src/test/scala/loaders/: ImageNetLoaderSpec.scala
src/test/scala/org/apache/spark/sparknet/: cifartest.scala  (+2 more)
(+3 files in other folders)
